--- a/backend/config/config.env
+++ b/backend/config/config.env
@@ -1,2 +1,4 @@
 PORT=5000
 DB_URI=mongodb+srv://ananthu:14020146@cluster0.lk4gy.mongodb.net/?retryWrites=true&w=majority
+JWT_TOKEN_SECRET=1$ai80@AMH6gmq4
+JWT_TOKEN_EXPIRES=5d
