admin -- delete user route set

--- a/backend/config/config.env
+++ b/backend/config/config.env
@@ -3,3 +3,8 @@ DB_URI=mongodb+srv://ananthu:14020146@cluster0.lk4gy.mongodb.net/?retryWrites=tr
 JWT_TOKEN_SECRET=1$ai80@AMH6gmq4
 JWT_TOKEN_EXPIRES=5d
 COOKIE_EXPIRES=5
+ADMIN_EMAIL=ananthakrishnans.muhamma@gmail.com
+ADMIN_EMAIL_PASSWORD=xoeftesxhldbcoug
+ADMIN_EMAIL_SERVICE=gmail
+SMPT_HOST=smpt.gmail.com
+SMPT_PORT=465
