--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
     "react-icons": "3.11",
+    "react-js-pagination": "^3.0.3",
     "react-loading": "^2.0.3",
     "react-rating-stars-component": "^2.2.0",
     "react-redux": "^8.0.2",
